created empty JSON model for testing.  Added to manifest

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -52,6 +52,11 @@
             "cozy": true
         },
         "models": {
+            "": {
+                "type": "sap.ui.model.json.JSONModel",
+                "uri": "model/projectData.json"
+            },
+
             "i18n": {
                 "type": "sap.ui.model.resource.ResourceModel",
                 "settings": {
