--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -95,8 +95,8 @@
                     "viewType": "XML",
                     "transition": "slide",
                     "clearControlAggregation": false,
-                    "viewId": "Project",
-                    "viewName": "Project"
+                    "viewId": "ProjectOverview",
+                    "viewName": "ProjectOverview"
                 }
             }
         },
