added sample array data structure, made some changes to Obj. data structure

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -52,7 +52,7 @@
             "cozy": true
         },
         "models": {
-            "": {
+            "progressObj": {
                 "type": "sap.ui.model.json.JSONModel",
                 "uri": "model/projectData.json"
             },
