added logic to set activeScope based on URL.  Rendering correctly.

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -90,7 +90,7 @@
                 },
                 {
                     "name": "stepDetails",
-                    "pattern": ":?phaseTasks:/:?subtasks:",
+                    "pattern": ":?phase:/:?task:/:?subtask:",
                     "target": [
                         "projOverview"
                     ]
