--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -82,17 +82,24 @@
             },
             "routes": [
                 {
-                    "name": "OverviewRt",
-                    "pattern": "placeholderDELETE",
+                    "name": "Overview",
+                    "pattern": "",
                     "target": [
                         "projOverview"
                     ]
                 },
                 {
-                    "name": "stepDetails",
-                    "pattern": ":?phase:/:?task:/:?subtask:",
+                    "name": "ProjectDetails",
+                    "pattern": "/project",
                     "target": [
                         "projOverview"
+                    ]
+                },
+                {
+                    "name": "PhaseDetails",
+                    "pattern": "project/{?phase}",
+                    "target": [
+                        "phaseDetails"
                     ]
                 }
             ],
@@ -102,14 +109,16 @@
                     "transition": "slide",
                     "clearControlAggregation": false,
                     "viewId": "ProjectOverview",
-                    "viewName": "ProjectOverview"
+                    "viewName": "ProjectOverview",
+                    "viewLevel": 1
                 },
-                "stepDetails": {
+                "phaseDetails": {
                     "viewType": "XML",
                     "transition": "slide",
                     "clearControlAggregation": false,
                     "viewId": "ProjectOverview",
-                    "viewName": "ProjectOverview"
+                    "viewName": "ProjectOverview",
+                    "viewLevel": 2
                 }
             }
         },
