--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -82,10 +82,10 @@
             },
             "routes": [
                 {
-                    "name": "Overview",
+                    "name": "Home",
                     "pattern": "",
                     "target": [
-                        "projOverview"
+                        "home"
                     ]
                 },
                 {
@@ -104,7 +104,15 @@
                 }
             ],
             "targets": {
-                
+                "home": {
+                    "viewType": "XML",
+                    "transition": "slide",
+                    "clearControlAggregation": false,
+                    "viewId": "Home",
+                    "viewName": "Home",
+                    "viewLevel": 1
+                },
+
                 "projOverview": {
                     "viewType": "XML",
                     "transition": "slide",
