--- a/webapp/model/projectData.json
+++ b/webapp/model/projectData.json
@@ -1,6 +1,6 @@
 {
     "stepKey": "overview",
-    "stepStr": "Overview",
+    "stepStr": "Project Overview",
     "phases": {
         "temporaryMigration": {
             "stepStr": "Temporary Migration",
