--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
         "eslint": "7.32.0",
         "eslint-plugin-fiori-custom": "2.6.7",
         "mbt": "^1.2.18",
-        "ui5-task-zipper": "^0.5.0",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "ui5-task-zipper": "^0.5.0"
     },
     "scripts": {
         "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#hipthipt-display\"",
