--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@sap-ux/eslint-plugin-fiori-tools": "^0.2.0",
         "@sap/eslint-plugin-ui5-jsdocs": "2.0.5",
         "@sap/ui5-builder-webide-extension": "^1.1.8",
-        "@sap/ux-ui5-tooling": "1",
+        "@sap/ux-ui5-tooling": "^1.13.1",
         "@sapui5/ts-types": "~1.120.0",
         "@ui5/cli": "^3.8.0",
         "eslint": "7.32.0",
